stock/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-db
  namespace: monkey-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: stock-db
  template:
    metadata:
      labels:
        app.kubernetes.io/name: stock-db
    spec:
      containers:
        - name: stock-db
          image: mysql
          ports:
            - containerPort: 3306
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: stock-db-svc
  namespace: monkey-ingress
spec:
  type: NodePort
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app.kubernetes.io/name: stock-db
---
