stock/stock.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-deployment
  namespace: monkey-ingress
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: stock
  template:
    metadata:
      labels:
        app.kubernetes.io/name: stock
    spec:
      containers:
        - name: stock
          image: slowlight50/backend-stock:26
          ports:
            - containerPort: 8080
          resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: stock-service
  namespace: monkey-ingress
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: stock
  ports:
    - port: 8080
      targetPort: 8080
